12749
The error message produced when you override an abstract var with a val is unclear,

For example:
{code}
abstract class A {
        var x : Int
}

class B extends A {
        val x = 2
}
{code}
produces the error:
{code}
error.scala:5: error: class B needs to be abstract, since variable x in class A of type Int is not defined
(Note that variables need to be initialized to be defined)
class B extends A {
^
{code}


It wuold be more obvious if this produced the same error as overriding a concrete var with a val, e.g.
{code}
abstract class A {
        var x = 1
}

class B extends A {
        override val x = 2
}
{code}
with the error message:
{code}
error.scala:6: error: error overriding variable x in class A of type Int;
 value x cannot override a mutable variable
        override val x = 2
                     ^
{code}
